--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ footer a:hover {color:#0c66b9; text-decoration:underline;}
   </a>
 
   <!-- النوت -->
-  <a href="notes.html" title="ملاحظاتي">
+  <a href="note.html" title="ملاحظاتي">
     <i class="fas fa-sticky-note"></i>
   </a>
 </div>
