--- a/index.html
+++ b/index.html
@@ -52,57 +52,35 @@ header h1 {font-size:24px; color:#fff;}
 .hero-text {color:#fff; max-width:700px; padding:20px; z-index:1; animation:fadeInUp 1.5s ease;}
 .hero-text h2 {font-size:48px; font-weight:700; margin-bottom:20px; animation:fadeInUp 1s ease;}
 .start-btn {
-  display:inline-block; padding:14px 40px; font-size:20px;font-weight:700;color:#fff;
-  border:none;border-radius:50px;background: linear-gradient(45deg,#17c726,#0974ee);
-  cursor:pointer;position:relative;overflow:hidden; box-shadow:0 0 15px rgb(9,107,163);
-  transition:transform .3s ease,box-shadow .3s ease; animation:fadeInUp 1.5s ease 0.5s; 
+  display: inline-block;
+  padding: 15px 40px;
+  background: linear-gradient(135deg,#00ff37, #097fee);
+  color: #fff;
+  font-size: 22px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-decoration: none;
+  border-radius: 50px;
+  box-shadow: 0 0 20px rgba(218,165,32,0.6);
+  transition: all 0.3s ease-in-out;
+  position: relative;
+  overflow: hidden;
 }
-.start-btn::before {
-  content:""; position:absolute; top:0; left:-100%; width:100%; height:100%;
-  background: rgba(255,255,255,0.3); transform: skewX(-25deg); transition:0.5s;
+
+.start-btn:hover {
+  background: linear-gradient(135deg, #097fee,#00ff37);
+  box-shadow: 0 0 35px rgba(218,165,32,0.9);
+  transform: scale(1.1);
 }
-.start-btn:hover::before {left:120%;}
-.start-btn:hover {transform:scale(1.1); box-shadow:0 0 25px rgb(8,90,167),0 0 50px rgba(9,32,238,0.8);}
+
 
 /* ===== Content Section ===== */
-.content {
-  padding: 100px 20px 60px 20px; text-align:center; background:linear-gradient(120deg, #345ce0, #8848d6);color:#222;
-}
-.content-title {font-size:2.5rem; margin-bottom:50px; font-weight:700;}
-.cards-container {
-  display:grid; grid-template-columns: repeat(auto-fit,minmax(280px,1fr)); gap:30px; max-width:1200px; margin:auto;
-}
-.card {
-  background:#fff; border-radius:20px; padding:30px 20px;
-  box-shadow:0 6px 20px rgba(34, 10, 167, 0.479); display:flex; flex-direction:column; align-items:center;
-  transition: transform .3s ease, box-shadow .3s ease; animation:fadeInUp 1s ease;
-}
-.card:hover {transform:translateY(-10px); box-shadow:0 10px 30px rgb(36, 4, 126);}
-.card h3 {font-size:1.8rem; margin-bottom:25px;}
-.card .btn {display:inline-block; padding:12px 25px; background:#111; color:#fff;
-  text-decoration:none; border-radius:10px; font-weight:600; margin:5px; transition:.3s;}
-.card .btn:hover {background:#0ebcd6; transform:scale(1.05);}
 
 
-.ribbon {
-  position: absolute;
-  top: 15px;
-  right: -30px;
-  transform: rotate(45deg);
-  background: crimson;
-  color: #fff;
-  padding: 5px 40px;
-  font-weight: bold;
-  box-shadow: 0 3px 6px rgba(0,0,0,.3);
-  font-size: 14px;
-}
 
-.btn-disabled {
-  background: #3b3b3bb2;
-  cursor: not-allowed;
-  pointer-events: none;
-  opacity: 0.7;
-}
+
+
 
 /* ===== Footer ===== */
 footer {
@@ -135,11 +113,6 @@ footer a:hover {color:#0c66b9; text-decoration:underline;}
   <a href="https://wa.me/201143384275" target="_blank" title="تواصل واتساب">
     <i class="fab fa-whatsapp"></i>
   </a>
-
-  <!-- النوت -->
-  <a href="note.html" title="ملاحظاتي">
-    <i class="fas fa-sticky-note"></i>
-  </a>
 </div>
  
 </header>
@@ -147,32 +120,13 @@ footer a:hover {color:#0c66b9; text-decoration:underline;}
 <section class="hero">
   <div class="hero-text">
     <h2>Your Success Starts Here</h2>
-    <button class="start-btn" onclick="document.getElementById('content').scrollIntoView({behavior:'smooth'});">Start</button>
+    <a href="code.html" class="start-btn">START</a>
   </div>
 </section>
 
-<section id="content" class="content">
-  <h2 class="content-title">Choose Your Prep</h2>
-  <div class="cards-container">
 
-    <div class="card">
-      <h3>Prep 1</h3>
-      <a href="code.html" class="btn">START</a>
-      
-    </div>
 
-    <div class="card">
-      <h3>Prep 2</h3>
-      <a href="code.html" class="btn">START</a>
-    </div>
 
-    <div class="card">
-      <h3>Prep 3</h3>
-      <a href="code.html" class="btn">START</a>
-    </div>
-
-  </div>
-</section>
 
 
 <footer>
